--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -108,6 +108,7 @@ tasks:
     <<: *preparation
     cmds:
       # --memray is not used on windows
+      - task: custom:download_robot
       - platforms: [windows]
         cmd: >
           poetry run pytest --junitxml={{.JUNIT_FILE}}
@@ -144,8 +145,8 @@ tasks:
     <<: *preparation
     cmds:
       # ignore 51358 safety - dev dependency only
-      # ignore 61489 pillow - dev dependency only
-      - poetry run safety check -i 51358 -i 61489
+      # ignore 67599 pip - dev dependency only
+      - poetry run safety check -i 51358 -i 67599
 
   check:ruff:
     desc: Complain about everything else
