--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ include = ["cmem_plugin_robotreason/workflow/bin/*"]
 [tool.poetry.dependencies]
 # if you need to change python version here, change it also in .python-version
 python = "^3.11"
+defusedxml = "^0.7.1"
 
 [tool.poetry.dependencies.cmem-plugin-base]
 version = "^4.3.0"
