update ROBOT to 1.9.6, task build includes ROBOT download

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -176,6 +176,7 @@ tasks:
     <<: *preparation
     deps:
       - clean
+      - custom:download_robot
       - poetry:check
     cmds:
       - poetry build
