fix safety error

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -146,7 +146,7 @@ tasks:
     cmds:
       # ignore 51358 safety - dev dependency only
       # ignore 70612 jinja2 - dev dependency only
-      - poetry run safety check -i 70612
+      - poetry run safety check -i 51358 -i 70612
 
   check:ruff:
     desc: Complain about everything else
