--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,9 +1,9 @@
 # Changes here will be overwritten by Copier
-_commit: v6.1.0
+_commit: v6.3.1
 _src_path: gh:eccenca/cmem-plugin-template
 author_mail: info@eccenca.com
 author_name: eccenca GmbH
-github_page: ''
+github_page: https://github.com/eccenca/cmem-plugin-robotreason
 project_description: Reasoning with Robot
 project_slug: robotreason
 pypi: false
