--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ homepage = "https://github.com/eccenca/cmem-plugin-robotreason"
 # if you need to change python version here, change it also in .python-version
 python = "^3.11"
 defusedxml = "^0.7.1"
+validators = "^0.28.3"
 
 [tool.poetry.dependencies.cmem-plugin-base]
 version = "^4.5.0"
