--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cmem-plugin-reason"
-version = "0.0.0.post1.dev0+6211d4d"
+version = "0.0.0"
 license = "Apache-2.0"
 description = "Reasoning with Robot"
 authors = ["eccenca GmbH <info@eccenca.com>"]
