--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cmem-plugin-reason"
-version = "0.0.0"
+version = "1.0.0alpha1"
 license = "Apache-2.0"
 description = "Reasoning with Robot"
 authors = ["eccenca GmbH <info@eccenca.com>"]
@@ -13,7 +13,7 @@ readme = "README-public.md"
 keywords = [
     "eccenca Corporate Memory", "plugin"
 ]
-include = ["cmem_plugin_reason/bin/*"]
+include = ["cmem_plugin_reason/bin/robot.jar"]
 
 homepage = "https://github.com/eccenca/cmem-plugin-reason"
 
