--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cmem-plugin-reason"
-version = "1.0.0a4.dev30+54984ec.dirty"
+version = "0.0.0"
 license = "Apache-2.0"
 description = "Reasoning with Robot"
 authors = ["eccenca GmbH <info@eccenca.com>"]
