--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,9 @@ homepage = "https://github.com/eccenca/cmem-plugin-reason"
 [tool.poetry.dependencies]
 # if you need to change python version here, change it also in .python-version
 python = "^3.11"
-validators = "^0.28.3"
+validators = "^0.32.0"
 pathvalidate = "^3.2.0"
+defusedxml = "^0.7.1"
 
 [tool.poetry.dependencies.cmem-plugin-base]
 version = "^4.5.0"
