--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python = "^3.11"
 validators = "^0.33.0"
 pathvalidate = "^3.2.0"
 defusedxml = "^0.7.1"
+urllib3 = "^2.2.2"
 
 [tool.poetry.dependencies.cmem-plugin-base]
 version = "^4.5.0"
